--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                   <li><a href="./assignment-1/index.html">Assignment No 1</a></li>
                   <li><a href="./assignment-2/index.html">Assignment No 2</a></li>
                   <li><a href="./assignment-3/index.html">Assignment No 3</a></li>
+                  <li><a href="./assignment-4/index.html">Assignment No 4</a></li>
                 </ul>
               </div>
             </div>          
