javascript assignment1 (chapter 1 to 20)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
                   <li><a href="./assignment-4/index.html">Assignment No 4</a></li>
                 </ul>
               </div>
-            </div>          
+            </div>
+            
+            <div class="assignments">
+              <h1>
+                JavaScript Assignments :
+              </h1>
+              <div class="assignmentList">
+                <ul>
+                  <li><a href="./assignment-5/index.html">Assignment No 1</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
         <div class="footer">
