--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <div class="assignmentList">
                 <ul>
                   <li><a href="./assignment-5/index.html">Assignment No 1</a></li>
+                  <li><a href="./assignment-6/index.html">Assignment No 2</a></li>
                 </ul>
               </div>
             </div>
