assignment 7 Calculator updated

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <ul>
                   <li><a href="./assignment-5/index.html">Assignment No 1</a></li>
                   <li><a href="./assignment-6/index.html">Assignment No 2</a></li>
+                  <li><a href="./assignment-7/index.html">Assignment No 3 : Calculator</a></li>
                 </ul>
               </div>
             </div>
